--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,3 +1,6 @@
+@(searchForm: Form[Search])(response: String)(implicit messages: play.i18n.Messages)
+@import helper._
+
 <html>
 <head>
     <title>Youtube Analyzer</title>
@@ -5,14 +8,12 @@
 <body>
 <section id="content">
     <h1>Youtube Analyzer</h1>
-    <a href="">Channel Information</a>
-    <a href="">Similar Content</a>
     <br/><br/>
-    <div class="wrapper doc">
-        <input type="text" placeholder="Search..">
-        <button onclick="">Search</button>
-    </div>
-    <div></div>
+    @helper.form(action = routes.YoutubeAnalyzerController.fetchVideosByKeywords()) {
+    @helper.inputText(searchForm("searchKeyword"))
+    <input type="submit" value="Search">
+    }
+    <div>@response</div>
 </section>
 </body>
 </html>
