--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,32 +1,30 @@
-@import models.SearchResults.SearchResults
-@(searchForm: Form[Search], searchResults: SearchResults)(response: String)(implicit messages: play.i18n.Messages)
+@(searchForm: Form[Search], searchResponse: List[String])(response: String)(implicit messages: play.i18n.Messages)
 
 
 <html>
-    <head>
-        <title>Youtube Analyzer</title>
-    </head>
-    <body>
-        <section id="content">
-            <h1>Youtube Analyzer</h1>
-            <br/><br/>
-            @helper.form(action = routes.YoutubeAnalyzerController.fetchVideosByKeywords()) {
-                @helper.inputText(searchForm("searchKeyword"))
-                <input type="submit" value="Search">
+<head>
+    <title>Youtube Analyzer</title>
+</head>
+<body>
+<section id="content">
+    <h1>Youtube Analyzer</h1>
+    <br/><br/>
+    @helper.form(action = routes.YoutubeAnalyzerController.fetchVideosByKeywords()) {
+    @helper.inputText(searchForm("searchKeyword"))
+    <input type="submit" value="Search">
+    }
+    <div>
+        @if(searchResponse != null) {
+        <ol>
+            @for(response <- searchResponse) {
+            <hr style="width:50%;text-align:left;margin-left:0">
+            @if(response != null) {
+            <li>@response</li>
             }
-            <div>
-                @if(searchResults != null) {
-                    <ol>
-                    @for(item <- searchResults.items) {
-                        <hr style="width:50%;text-align:left;margin-left:0">
-                        @if(item != null) {
-                            <li>@item.snippet.title, <b>@item.snippet.channelTitle</b>
-                                ,@item.viewCount ,@item.snippet.publishTime</li>
-                        }
-                    }
-                    </ol>
-                }
-            </div>
-        </section>
-    </body>
+            }
+        </ol>
+        }
+    </div>
+</section>
+</body>
 </html>
