--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -26,7 +26,8 @@
             <hr style="width:50%;text-align:left;margin-left:0">
             @if(item != null) {
             <li>@item.snippet.title, <b>@item.snippet.channelTitle</b>
-                ,@item.viewCount ,@item.snippet.publishTime</li>
+                ,@item.viewCount ,@item.snippet.publishTime
+            </li>
             }
             }
         </ol>
