link to video title | channel link to open channel info page

--- a/app/views/channelInfo.scala.html
+++ b/app/views/channelInfo.scala.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+@(id: String)
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Channel Information</title>
 </head>
 <body>
-<h1>Channel Information</h1>
+<h1>Channel Information @id</h1>
 </body>
 </html>
