--- a/app/views/similarContent.scala.html
+++ b/app/views/similarContent.scala.html
@@ -4,13 +4,37 @@
     <head>
         <meta charset="UTF-8">
         <title>Similar Content</title>
+        <style>
+                table {
+                    font-family: arial, sans-serif;
+                    border-collapse: collapse;
+                    width: 50%;
+                }
+
+                td, th {
+                    border: 1px solid #dddddd;
+                    text-align: left;
+                    padding: 8px;
+                }
+
+                tr:nth-child(even) {
+                    background-color: #dddddd;
+                }
+        </style>
     </head>
     <body>
         <h1>Similar Content</h1>
-        @if(similarityStatsMap != null && similarityStatsMap.size() > 0) {
-            @for((token, count) <- similarityStatsMap) {
-                <h5>@token : @count</h5>
+        <table>
+            <tr>
+                <th><b>Word</b></th>
+                <th>Count</th>
+            </tr>
+            @if(similarityStatsMap != null && similarityStatsMap.size() > 0) {
+                @for((token, count) <- similarityStatsMap) {
+                    <tr><td>@token </td>
+                        <td> @count</td></tr>
+                }
             }
-        }
+        </table>
     </body>
 </html>
