architecture chages in append-viewcount

--- a/app/views/channelInfo.scala.html
+++ b/app/views/channelInfo.scala.html
@@ -1,5 +1,5 @@
-@import models.SearchResults.SearchResults
-@import models.Channel.ChannelItem
+@import models.POJO.Channel.ChannelItem
+@import models.POJO.SearchResults.SearchResults
 @(searchResults: SearchResults)(channelItem: ChannelItem)(implicit messages: play.i18n.Messages)
 
 <html lang="en">
