--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@import models.SearchResults.SearchResults
+@import models.POJO.SearchResults.SearchResults
 @(searchForm: Form[Search], searchResultsMap: Map[String, SearchResults])(implicit messages: play.i18n.Messages)
 
 
