--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -31,8 +31,8 @@
                                 @if(item != null) {
                                     <li><a href="https://www.youtube.com/watch?v=@item.id.videoId" target="_blank">@item.snippet.title</a>
                                         ,
-                                        <a href="@routes.YoutubeAnalyzerController.fetchChannelInformationAndTop10Videos(item.snippet.channelId,searchWords)"><b>@item.snippet.channelTitle</b></a>
-                                        ,@item.viewCount ,@item.snippet.publishTime
+                                        <a href="@routes.YoutubeAnalyzerController.fetchChannelInformationAndTop10Videos(item.snippet.channelId, searchWords)"><b>@item.snippet.channelTitle</b></a>
+                                        ,@item.viewCount ,@item.snippet.publishTime,
                                     </li>
                                 }
                             }
