html generation based on websocket response

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,80 +17,105 @@
                 <input type="submit" value="Search">
                 <input type="button" onclick="send()" value="Button">
             }
-                <div>
-                @if(searchResultsMap != null && searchResultsMap.size > 0) {
-                    @for((searchWords, searchResults) <- searchResultsMap) {
-                        @if(searchResults != null && searchResults.getItems() != null) {
-                            <span>
-                                <b>Search Terms: </b>
-                                <a href='@routes.YoutubeAnalyzerController.fetchSimilarityStats(searchWords)'>@searchWords</a>
-                            </span>
-                            <ol>
-                            @for(item <- searchResults.getItems()) {
-                                <hr style="width: 75%;
-                                    text-align: left;
-                                    margin-left: 0">
-                                @if(item != null) {
-                                    <li><a href="https://www.youtube.com/watch?v=@item.getId().getVideoId()" target="_blank">@item.getSnippet().getTitle()</a>
-                                        ,
-                                        <a href="@routes.YoutubeAnalyzerController.fetchChannelInformationAndTop10Videos(item.getSnippet().getChannelId(), searchWords)"><b>@item.getSnippet().getChannelTitle()</b></a>
-                                        ,@item.getViewCount(), @item.getCommentSentiment(),@item.getSnippet().getPublishTime(),
-                                    </li>
-                                }
+            <div>
+            @if(searchResultsMap != null && searchResultsMap.size > 0) {
+                @for((searchWords, searchResults) <- searchResultsMap) {
+                    @if(searchResults != null && searchResults.getItems() != null) {
+                        <span>
+                            <b>Search Terms: </b>
+                            <a href='@routes.YoutubeAnalyzerController.fetchSimilarityStats(searchWords)'>@searchWords</a>
+                        </span>
+                        <ol id="@searchWords">
+                        @for(item <- searchResults.getItems()) {
+                            <hr style="width: 75%;
+                                text-align: left;
+                                margin-left: 0">
+                            @if(item != null) {
+                                <li><a href="https://www.youtube.com/watch?v=@item.getId().getVideoId()" target="_blank">@item.getSnippet().getTitle()</a>
+                                    ,
+                                    <a href="@routes.YoutubeAnalyzerController.fetchChannelInformationAndTop10Videos(item.getSnippet().getChannelId(), searchWords)"><b>@item.getSnippet().getChannelTitle()</b></a>
+                                    ,@item.getViewCount(), @item.getCommentSentiment(),@item.getSnippet().getPublishTime(),
+                                </li>
                             }
-                            </ol>
                         }
+                        </ol>
                     }
                 }
-        </div>
-        </section>
-    <script>
-        var webSocket;
+            }
+            </div>
+            </section>
+        <script>
+                var webSocket;
 
-        function init() {
-            initWs();
-        }
-        init();
-        function initWs(){
-            webSocket = new WebSocket("@url");
-            webSocket.onopen = onOpen;
-            webSocket.onclose = onClose;
-            webSocket.onmessage = onMessage;
-            webSocket.onerror = onError;
-        }
+                function init() {
+                    initWs();
+                }
 
-        function send(){
-            console.log("Send");
-            webSocket.send(JSON.stringify("Hello, Please send me something"));
-        }
+                init();
 
-        function onOpen(evt) {
-            writeToScreen("CONNECTED");
-        }
+                function initWs() {
+                    webSocket = new WebSocket("@url");
+                    webSocket.onopen = onOpen;
+                    webSocket.onclose = onClose;
+                    webSocket.onmessage = onMessage;
+                    webSocket.onerror = onError;
+                }
 
-        function onClose(evt) {
-            writeToScreen("DISCONNECTED");
-            appendMessageToView("DISCONNECTED");
-        }
+                function send() {
+                    console.log("Send");
+                    webSocket.send(JSON.stringify("Hello, Please send me something"));
+                }
 
-        function onError(evt) {
-            writeToScreen("ERROR: " + evt.data);
-            writeToScreen("ERROR: " + JSON.stringify(evt));
-        }
+                function onOpen(evt) {
+                    writeToScreen("CONNECTED");
+                }
 
-        function onMessage(evt) {
-            var receivedData = JSON.parse(evt.data);
-            console.log("New Data: ", receivedData);
-            appendMessageToView(receivedData);
-        }
+                function onClose(evt) {
+                    writeToScreen("DISCONNECTED");
+                    appendMessageToView("DISCONNECTED");
+                }
 
-        function appendMessageToView(json) {
-            $("#message").append("<p>" + json.name+ " "+ json.age + "</p>");
-        }
+                function onError(evt) {
+                    writeToScreen("ERROR: " + evt.data);
+                    writeToScreen("ERROR: " + JSON.stringify(evt));
+                }
 
-        function writeToScreen(message) {
-            console.log("New message: ", message);
-        }
-</script>
-</body>
+                function onMessage(evt) {
+                    let receivedData = JSON.parse(evt.data);
+                    console.log("New Data: ", receivedData);
+                    addOrUpdateSearchResults(receivedData);
+                }
+
+                function appendMessageToView(json) {
+                    $("#message").append("<p>" + json.name + " " + json.age + "</p>");
+                }
+
+                function writeToScreen(message) {
+                    console.log("New message: ", message);
+                }
+
+                function addOrUpdateSearchResults(jsonResponse) {
+                    for (let i = 0; i < Object.keys(jsonResponse).length; i++) {
+                        let key = Object.keys(jsonResponse)[i]
+                        let value = jsonResponse[key].items
+                        let count = value.length;
+                        const hr = " <hr style=\"width: 75%;\n" +
+                                "text-align: right;\n" +
+                                "margin-left: 100px\">"
+                        let li;
+                        for (let j = 0; j < count; j++) {
+                            let searchResult = value[j];
+                            li += "<li>" +
+                                    `<a href="https://www.youtube.com/watch?v=${searchResult.id.videoId}" target=_blank'>` + searchResult.snippet.title + "</a>" + " , " +
+                                    `<a href="/channel/${searchResult.snippet.channelId}/${key}">` +
+                                    "<b>" + searchResult.snippet.channelTitle + "</b></a>" + " , "
+                                    + searchResult.viewCount + " , " + searchResult.commentSentiment + " , " + searchResult.snippet.publishTime +
+                                    "</li>";
+                        }
+                        let ol = document.getElementById(key); // reference to containing element
+                        ol.innerHTML = hr + li;
+                    }
+                }
+        </script>
+    </body>
 </html>
